VR: Removing copy_rect from external textures

Bug: 842654
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr
Change-Id: I31f9326575d8f78e86fde26475099a417c244bb6
Reviewed-on: https://chromium-review.googlesource.com/1058187
Reviewed-by: Christopher Grant <cjgrant@chromium.org>
Commit-Queue: Aldo Culquicondor <acondor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558486}
Former-commit-id: d9984a81abe77ada0eecc4593be8afa8c7d71c50