chrome/browser/vr/renderers/external_textured_quad_renderer.cc
@@ -16,7 +16,6 @@ static constexpr char const* kFragmentShader = OEIE_SHADER(
   precision highp float;
   uniform samplerExternalOES u_Texture;
   uniform samplerExternalOES u_OverlayTexture;
-  uniform vec4 u_CopyRect;
   varying vec2 v_TexCoordinate;
   varying vec2 v_CornerPosition;
   uniform mediump float u_Opacity;
@@ -24,12 +23,9 @@ static constexpr char const* kFragmentShader = OEIE_SHADER(
   uniform bool u_UsesOverlay;
 
   void main() {
-    vec2 scaledTex =
-        vec2(u_CopyRect[0] + v_TexCoordinate.x * u_CopyRect[2],
-        u_CopyRect[1] + v_TexCoordinate.y * u_CopyRect[3]);
-    lowp vec4 color = texture2D(u_Texture, scaledTex);
+    lowp vec4 color = texture2D(u_Texture, v_TexCoordinate);
     if (u_UsesOverlay) {
-      lowp vec4 overlay_color = texture2D(u_OverlayTexture, scaledTex);
+      lowp vec4 overlay_color = texture2D(u_OverlayTexture, v_TexCoordinate);
       overlay_color = overlay_color * u_OverlayOpacity;
       color = mix(color, overlay_color, overlay_color.a);
     }
